--- a/FireArrow/FireArrow.csproj
+++ b/FireArrow/FireArrow.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="MCMv4, Version=4.3.6.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\Bannerlord.MCM.4.3.6\lib\net472\MCMv4.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,6 +72,7 @@
     </Reference>
     <Reference Include="TaleWorlds.ObjectSystem">
       <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\bin\Win64_Shipping_Client\TaleWorlds.ObjectSystem.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
